fixed padding of content_text on mobile

--- a/style.css
+++ b/style.css
@@ -1033,7 +1033,7 @@
 
         .content_text {
          color: #fff;
-         padding-top: 248px;
+         padding-top: 120px;
         }
 
         .nav_of_second_section {
